# GoLogin-Chat

./: CMakeLists.txt
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/Domain/: CMakeLists.txt
src/Gui/: CMakeLists.txt
src/Gui/resources/qml/: main.qml  qml.qrc
src/Gui/resources/qml/MainWindow/: Body.qml  Footer.qml  Header.qml
src/Gui/resources/qml/Shared/: Authorization.qml  Selection.qml  TextBox.qml
src/Gui/src/QmlApplication/: QmlApplication.cpp  QmlApplication.hpp
